<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Pack Heng
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Popular Movies</string>
    <string name="settings">Settings</string>
    <string name="movie_details">Movie details</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="trailer">Trailer</string>

    <!-- Labels -->
    <string name="user_rating_label">User Rating:&#160;</string>
    <string name="release_date_label">Release date:&#160;</string>
    <string name="favorite_label">Favorite:&#160;</string>

    <!-- Content descriptions -->
    <string name="movie_poster">A movie poster</string>
    <string name="trailer_thumbnail">"Thumbnail of a trailer of the movie"</string>

    <!-- Main menu items -->
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_settings">Settings</string>

    <!-- Settings -->
    <string name="pref_sort_by_label">Sort by</string>
    <string name="pref_sort_by_key" translatable="false">Sort by</string>
    <string name="pref_sort_by_default">@string/pref_sort_by_most_popular</string>
    <string name="pref_sort_by_most_popular">Most Popular Movies</string>
    <string name="pref_sort_by_top_rated">Top Rated Movies</string>
    <string name="pref_sort_by_favorites">Favorite Movies</string>

    <string-array name="pref_sort_by_entries">
        <item>@string/pref_sort_by_most_popular</item>
        <item>@string/pref_sort_by_top_rated</item>
        <item>@string/pref_sort_by_favorites</item>
    </string-array>

    <string-array name="pref_sort_by_values">
        <item>@string/pref_sort_by_most_popular</item>
        <item>@string/pref_sort_by_top_rated</item>
        <item>@string/pref_sort_by_favorites</item>
    </string-array>

    <!-- Warning messages -->
    <string name="no_internet">You are offline. Please check network connectivity.</string>
    <string name="no_movies_data_found">No movies data found when downloading.</string>
    <string name="issue_with_fetching_movie_data">Oops! There\'s an issue with downloading movies data.</string>
    <string name="no_poster_found">No poster found</string>
    <string name="unknown">Unknown</string>
    <string name="no_plot_synopsis_found">No plot synopsis found</string>
    <string name="no_review_data_found">No review data found when downloading.</string>
    <string name="issue_with_fetching_review_data">Oops! There\'s an issue with downloading review data.</string>

    <!-- Review -->
    <string name="review_author_label">Author: </string>
    <string name="review_unknown_author">Unknown author</string>
    <string name="review_no_content">No review content</string>
    <string name="review_content_example">Amazing. Visually stunning. So much going on, but somehow also clear and easy to understand. A little flabby in the middle third, but given the huge cast and story to cover it is very understandable. The highlight was the parings of characters from different stories and their interactions.</string>

    <!-- Favorite -->
    <string name="marked_as_favorite">Marked as a favorite</string>
    <string name="unmarked_as_favorite">Unmarked as a favorite</string>
    <string name="no_favorites">No movie has been marked as favorite</string>

    <string name="share_first_trailer">Share the first trailer’s YouTube URL if it exist</string>

    <!-- Example -->
    <string name="blade_runner_title">Blade Runner: Final Cut</string>
    <string name="blade_runner_release_date">2007&#8211;10&#8211;01</string>
    <string name="blade_runner_user_rating">3.7</string>
    <string name="blade_runner_overview">Ridley Scott\'s definitive Blade Runner: The Final Cut (2007) includes extended scenes and new special effects. Harrison Ford stars in this fascinating, dark vision of the near future as a policeman who tracks engineered humans &#8212; a Blade Runner. In the year 2019, the police department forces Rick Deckard (Ford) out of retirement to hunt four genetically engineered humans who have come to earth. Designed to do difficult, hazardous work, the manufactured humans are stronger, faster and smarter than non engineered humans. They feel no pain or remorse; they are almost indistinguishable from other humans &#8230; and they are killing people. Now Deckard must stop them before they kill again.
</string>
</resources>
