<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018 Pack Heng
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin">

        <TextView
            android:id="@+id/detail_activity_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/blade_runner_title" />

        <ImageView
            android:id="@+id/detail_activity_poster_iv"
            android:layout_width="@dimen/detail_movie_poster_width"
            android:layout_height="@dimen/detail_movie_poster_height"
            android:layout_marginTop="@dimen/default_margin"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_activity_title_tv"
            tools:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/detail_activity_poster_empty_tv"
            android:layout_width="@dimen/detail_movie_poster_width"
            android:layout_height="@dimen/detail_movie_poster_height"
            android:background="@drawable/orange_rectangle"
            android:gravity="center"
            android:text="@string/no_poster_found"
            android:textAppearance="?android:textAppearanceSmall"
            app:layout_constraintLeft_toLeftOf="@+id/detail_activity_poster_iv"
            app:layout_constraintTop_toTopOf="@+id/detail_activity_poster_iv" />

        <TextView
            android:id="@+id/detail_activity_user_rating_label_tv"
            style="@style/DetailTextViewStyle"
            android:text="@string/user_rating_label"
            app:layout_constraintLeft_toRightOf="@id/detail_activity_poster_iv"
            app:layout_constraintTop_toTopOf="@+id/detail_activity_poster_iv" />

        <TextView
            android:id="@+id/detail_activity_user_rating_tv"
            style="@style/DetailTextViewStyle"
            android:textStyle="italic"
            app:layout_constraintLeft_toRightOf="@id/detail_activity_poster_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_activity_user_rating_label_tv"
            tools:text="@string/blade_runner_user_rating" />

        <TextView
            android:id="@+id/detail_activity_release_date_label_tv"
            style="@style/DetailTextViewStyle"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/release_date_label"
            app:layout_constraintLeft_toRightOf="@id/detail_activity_poster_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_activity_user_rating_tv" />

        <TextView
            android:id="@+id/detail_activity_release_date_tv"
            style="@style/DetailTextViewStyle"
            android:textStyle="italic"
            app:layout_constraintLeft_toRightOf="@id/detail_activity_poster_iv"
            app:layout_constraintTop_toBottomOf="@+id/detail_activity_release_date_label_tv"
            tools:text="@string/blade_runner_release_date" />

        <TextView
            android:id="@+id/detail_activity_plot_synopsis_tv"
            style="@style/DetailPlotTextViewStyle"
            android:layout_width="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detail_activity_poster_iv"
            tools:text="@string/blade_runner_overview" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>